# cgal

Linear_cell_complex/demo/Linear_cell_complex/: CMakeLists.txt  LCC_demo_plugin_interface.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Viewer.cpp
Linear_cell_complex/demo/Linear_cell_complex/Plugins/: LCC_demo_plugin_macro.cmake
Linear_cell_complex/demo/Linear_cell_complex/Plugins/Test/: CMakeLists.txt  Test.cpp
